# parking-newtaipei

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
aws/ecs/: Dockerfile.scheduled  eventbridge-rules.json  task-definition-fargate.json  task-definition-scheduled.json
docker/: crontab  entrypoint.sh
docs/: 122902.ttl  122955.ttl  AWS_ECS_DEPLOYMENT.md  DOCKER_DEPLOYMENT.md  INIT_PLAN.md
scripts/: crontab.example  sync-data.sh
src/parking_newtaipei/: __init__.py  __main__.py  config.py  main.py
src/parking_newtaipei/api/: __init__.py  client.py
src/parking_newtaipei/db/: __init__.py  availability.py  connection.py  models.py
src/parking_newtaipei/etl/: __init__.py  availability_sync.py  parking_sync.py
src/parking_newtaipei/utils/: __init__.py  healthcheck.py  logger.py  process_lock.py  storage.py  time.py
tests/: test_process_lock.py  test_storage.py
